# AirAPI_Windows

./: .gitignore  .gitmodules  AirAPI.cpp  AirSample.cpp  CMakeLists.txt  FusionAhrsReader.cpp  LICENSE.md  XrealAir.cpp
include/: AirAPI.h  AirSample.h  FusionAhrsReader.h  XrealAir.h
